Prevent main clipping header shadow

--- a/docs/assets/css/base.css
+++ b/docs/assets/css/base.css
@@ -305,6 +305,7 @@ button:hover {
 header {
   display: flex;
   width: 100%;
+  z-index: 1;
 }
 
 header span, header span:before, header span:after {
